[1.10][&1.9] fix stack panel style broken in r12736
http://code.google.com/p/fbug/source/detail?r=12753

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -113,7 +113,7 @@
 
 /*****************************************************************************************/
 
-.objectBox {
+.inline {
     display: inline;
     white-space: normal;
 }
